[package]
name = "crystal-rush"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = { version = "0.4", default-features = false, features = ["audio"] }

# Browser-only persistence: the ledger uses the filesystem natively, but wasm
# has no fs — quad-storage maps the same key/value strings onto the browser's
# localStorage. Native builds never pull this (or its JS shims).
[target.'cfg(target_arch = "wasm32")'.dependencies]
quad-storage = "0.1.3"

[profile.release]
opt-level = 3
lto = true
strip = true
